--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "start": "cross-env NODE_ENV=testing npx sandbox"
   },
   "devDependencies": {
-    "@architect/functions": "latest",
+    "@architect/functions": "^3.13.9",
     "@architect/sandbox": "^3.3.6",
     "@begin/data": "latest",
     "cross-env": "^7.0.3"
+  },
+  "dependencies": {
+    "axios": "^0.21.1",
+    "twitter-api-client": "^1.3.2"
   }
 }
